final commit - GAME LA DE~